--- a/package.json
+++ b/package.json
@@ -15,28 +15,30 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^3.0.1",
-    "@quasar/extras": "^1.16.4",
-    "quasar": "^2.16.0",
-    "vue": "^3.5.22",
+    "@quasar/extras": "^1.17.0",
+    "axios": "^1.13.4",
+    "pinia": "^3.0.4",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.27",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^10.4.0",
-    "globals": "^16.4.0",
-    "vue-tsc": "^3.0.7",
-    "@vue/eslint-config-typescript": "^14.4.0",
-    "vite-plugin-checker": "^0.11.0",
+    "@eslint/js": "^9.39.2",
+    "@quasar/app-vite": "^2.4.0",
+    "@types/node": "^25.2.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^17.3.0",
+    "kolorist": "^1.8.0",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3",
+    "vite-plugin-checker": "^0.12.0",
+    "vite-plugin-vue-devtools": "^8.0.6",
     "vue-eslint-parser": "^10.2.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "prettier": "^3.3.3",
-    "@types/node": "^20.5.9",
-    "@quasar/app-vite": "^2.1.0",
-    "autoprefixer": "^10.4.2",
-    "typescript": "^5.9.2"
+    "vue-tsc": "^3.2.4"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20",
